--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "passport-google-oauth20": "2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
