--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     "eject": "react-scripts eject",
     "testEslint": "eslint --ext .js,.jsx ./"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
