--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bulletin-board",
-  "version": "0.1.0",
+  "name": "mineral-shop",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "run-p start:* ",
