--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "uuid-random": "^1.3.2"
   },
   "devDependencies": {
+    "eslint": "^7.16.0",
+    "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0"
   }
 }
