--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "start": "nodemon server.js",
     "build": "cd client && yarn install && yarn build",
     "test": "set NODE_ENV=production && mocha --watch \"./{,!(node_modules)/**/}*.test2.js\"",
-    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test"
+    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test",
+    "testEslint": "eslint --ext .js,.jsx ./"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
