--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
+  "name": "mineral-shop",
+  "version": "1.0.0",
   "scripts": {
     "start": "nodemon server.js",
-    "build": "cd client && yarn install && yarn build",
-    "test": "set NODE_ENV=production && mocha --watch \"./{,!(node_modules)/**/}*.test2.js\"",
-    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test",
-    "testEslint": "eslint --ext .js,.jsx ./"
+    "build": "cd client && yarn install && yarn build"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "chai": "4.2.0",
-    "chai-http": "4.3.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mocha": "^6.2.1",
     "mongodb": "3.3.2",
     "mongoose": "5.7.1",
     "nodemon": "^2.0.4",
-    "onchange": "6.1.0",
-    "socket.io": "2.2.0",
-    "uuid": "^8.3.1",
-    "uuid-random": "^1.3.2"
+    "onchange": "6.1.0"
   },
   "devDependencies": {
     "husky": "^4.3.0"
